# mcp-server-template

./: .gitignore  .justfile  CLAUDE.md  Cargo.toml  LICENSE  build.rs  cargo-generate.toml  cliff.toml
docs/superpowers/plans/: 2026-06-26-mcp-server-template.md
docs/superpowers/specs/: 2026-06-26-rs-mcp-template-design.md
hooks/: post-script.rhai
migrations/: 001_init.sql
src/: api.rs  cli.rs  config.rs  db.rs  http.rs  lib.rs  main.rs  model.rs  server.rs  store.rs
tests/: api_integration.rs
{{dashboard_dir}}/: vite.config.snippet.js
