[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
description = "{{project_description}}"

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[lib]
name = "{{crate_name}}"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "1", features = [
  "server",
  "macros",
  "transport-streamable-http-server",
] }
axum = "0.8"
tower-http = { version = "0.7", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
{% if include_db %}
libsql = { version = "0.9", features = ["core"] }
{% endif %}
{% if include_dashboard %}
include_dir = "0.7"
mime_guess = "2"
{% endif %}

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
